# voxelbuilder_client

./: .gitignore  Cargo.toml  README.md  premake5.lua
.github/workflows/: build-all.yml  clang-format-check.yml
VBuilder/res/shaders/: FBFragment.glsl  FBVertex.glsl  MenuFragment.glsl  MenuVertex.glsl  TextFragment.glsl  TextVertex.glsl  TextureFragment.glsl  TextureVertex.glsl
VBuilder/src/: vbpch.cpp  vbpch.h
VBuilder/src/Application/: Application.cpp
VBuilder/src/Application/Game/: Game.cpp  Game.h
VBuilder/src/Application/Game/Networking/: Packets.cpp  Packets.h
VBuilder/src/Application/Game/Player/: Camera3D.cpp  Camera3D.h  CreativeInventory.cpp  CreativeInventory.h  Player.cpp  Player.h
VBuilder/src/Core/: Base.h  Input.cpp  Input.h  Log.cpp  Log.h  Time.h  Timer.cpp  Timer.h  Window.cpp  Window.h
VBuilder/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VBuilder/src/Platform/Linux/: LinuxPlatformUtils.cpp
VBuilder/src/Platform/Windows/: WindowsPlatformUtils.cpp
VBuilder/src/Renderer/: Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.cpp  VertexBufferLayout.h  WorldRenderer.cpp  WorldRenderer.h
VBuilder/src/Utils/: PlatformUtils.h  stb_image.cpp
scripts/: GenerateMakeProjects.sh
src/: camera.rs  main.rs  shader.wgsl  texture.rs
(+11 files in other folders)
