[package]
name = "voxelbuilder_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxelbuilder_common = { path = "../voxelbuilder_common" }

env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.28.6"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
anyhow = "1.0.75"
cgmath = "0.18.0"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
